# mediaman

./: .gitignore  Makefile  config.ini.template  mypy.ini  pyproject.toml  requirements.txt
mediaman/: __init__.py  __main__.py  main.py
mediaman/services/: __init__.py  imdb_watchlist.py  trakt_service.py
