[tool.poetry]
name = "mediaman"
version = "0.1.0"
description = ""
authors = ["Tyler Neuenschwander <tcn@producepro.com>"]
readme = README.md

[tool.poetry.dependencies]
python = "^3.6"
trakt = "^2.12"
python-telegram-bot = "^12.2"
typer = "^0.2.1"

[tool.poetry.scripts]
mediaman = "mediaman.main:main"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "^19.10b0"
flake8 = "^3.8.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
