[tool.poetry]
name = "mediaman"
version = "1.1.0"
description = ""
authors = ["Tyler Neuenschwander <tcneuen@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
typer = "^0.2.1"
trakt = "^3.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
mypy = "^0.782"
pytest = "^6.0.1"
pex = "^2.1.15"
setuptools = "^50.0.0"
wheel = "^0.35.1"

[tool.poetry.scripts]
mediaman = "mediaman.main:app"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

